assets/main.css
html[data-theme="dark"] {
  --bold-color: #ffffff;
  --box-background-color: hsl(0, 0%, 20%);
  --highlight-color: hsl(0, 0%, 60%);
  --light-border-color: hsl(0, 0%, 30%);
  --light-text-color: rgb(199, 199, 204);
  --link-color: #ea88d1;
  --link-color-visited: hsl(250, 100%, 60%);
  --main-background-color: #072540;
  --main-text-color: #93c2db;
  --medium-text-color: hsl(0, 0%, 70%);
  --underline-color: hsl(0, 0%, 50%);
  --social-link-color: #ffffff;
  --card-background-color: #183d5d;
  --newsletter-background-color: #222324;
  --button-background-color: #111;
  --nav-background-color: #032039;
}

html, html[data-theme="light"] {
  --bold-color: #094070;
  --box-background-color: rgb(249, 249, 250);
  --highlight-color: hsl(0, 0%, 80%);
  --light-border-color: rgb(230, 230, 230);
  --light-text-color: rgb(72, 72, 74);
  --link-color: #0074bb;
  --link-color-visited: hsl(250, 100%, 37%);
  --main-background-color: #fcfcfc;
  --main-text-color:#9c4f68;
  --medium-text-color: hsl(0, 40%, 2%);
  --sidebar-color: hsl(0, 0%, 90%);
  --underline-color: hsl(0, 0%, 60%);
  --social-link-color: #262222;
  --card-background-color: #ffffff;
  --newsletter-background-color: #00000008;
  --button-background-color: #fff;
  --nav-background-color: #fafafa;
}

html, html[data-theme="dark"], html[data-theme="light"] {
  height: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  scroll-behavior: smooth;
  scrollbar-width: none;
}

* {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
  color: var(--link-color) !important;
  -webkit-text-decoration-skip: objects
}

a:hover {
  color: #0056b3;
  text-decoration: underline
}

table {
  border-collapse: separate;
  border-spacing: 0.2em 0.35em;
}

li {
  list-style-type: none;
}

body {
  background-color: var(--main-background-color) !important;
  color: var(--main-text-color) !important;
  font-family: 'Quicksand', sans-serif !important;
  font-feature-settings: "kern"on;
  font-size: 1.4rem;
  font-variant-numeric: oldstyle-nums;
  height: 100%;
  line-height: 1.35em;
  margin: 0;
  padding-top: 33px;
}

pre {
  display: block;
  font-size: 87.5%;
  color: #d4d4d4 !important;
}

blockquote {
  margin: 2rem 1rem 1rem;
  padding: 3px;
  background: var(--main-background-color) !important;
  border: 1px solid;
  color: var(--bold-color);
}

::-webkit-scrollbar {
  display: none;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.1;
}

.navbar {
  position: fixed;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: .5rem 1rem;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1030;
  padding-left: 5%;
  padding-right: 5%;
  background-color: var(--nav-background-color) !important;
  box-shadow: #000 0px 0px 6px;
}

.navbar-brand {
  display: inline-block;
  padding-top: .3125rem;
  padding-bottom: .3125rem;
  margin-right: 1rem;
  font-size: 1.25rem;
  line-height: inherit;
  white-space: nowrap;
  color: #b55179 !important;
}

.card {
  position: relative;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  word-wrap: break-word;
  background-clip: border-box;
  border: 1px solid rgba(0, 0, 0, .125);
  border-radius: .65rem;
  padding: 20px !important;
  background-color: var(--card-background-color);
  margin-right: 7.5%;
  margin-left: 7.5%;
  margin-top: 90px;
  /* margin-top: 5%; */
  margin-bottom: 3%;
}

footer {
  width: 100%;
  height: 70px;
  text-align: center;
  padding: 20px;
  background-color: var(--main-background-color);
  color: var(--main-text-color);
}
/* ... */

